Fix css bug on collapse menu

--- a/templates/backOffice/default/assets/less/thelia/navbar.less
+++ b/templates/backOffice/default/assets/less/thelia/navbar.less
@@ -99,7 +99,7 @@
         .collapse {
             position: absolute;
             top: 0;
-            right: 0px;
+            right: 100px;
             width: 240px;
             .opacity(0);
             .transition(all 0.3s ease);
